--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "@material-ui/core": "4.5.2",
+    "@material-ui/lab": "^4.0.0-alpha.30",
     "moment": "2.24.0",
     "prop-types": "15.7.2",
     "react": "16.11.0",
