configuracion de eslint/prettier, correccion de modulos restantes

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "@material-ui/core": "4.5.2",
-    "@material-ui/lab": "^4.0.0-alpha.30",
+    "@material-ui/lab": "4.0.0-alpha.30",
     "moment": "2.24.0",
     "prop-types": "15.7.2",
     "react": "16.11.0",
@@ -17,15 +17,18 @@
     "@babel/plugin-transform-runtime": "7.6.2",
     "@babel/preset-env": "7.6.3",
     "@babel/preset-react": "7.6.3",
+    "babel-eslint": "10.0.3",
     "babel-loader": "8.0.6",
-    "babel-plugin-inline-react-svg": "^1.1.0",
+    "babel-plugin-inline-react-svg": "1.1.0",
     "eslint": "6.6.0",
+    "eslint-config-prettier": "6.5.0",
+    "eslint-plugin-prettier": "3.1.1",
     "html-webpack-plugin": "3.2.0",
     "jss": "10.0.0",
     "moment-locales-webpack-plugin": "1.1.0",
     "prettier": "1.18.2",
-    "react-inlinesvg": "^1.1.7",
-    "svg-inline-loader": "^0.8.0",
+    "react-inlinesvg": "1.1.7",
+    "svg-inline-loader": "0.8.0",
     "svg-react-loader": "0.4.6",
     "webpack": "4.41.2",
     "webpack-cli": "3.3.10",
