--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-eslint": "10.0.3",
     "babel-loader": "8.0.6",
     "babel-plugin-inline-react-svg": "1.1.0",
+    "dotenv-webpack": "^1.7.0",
     "eslint": "6.6.0",
     "eslint-config-prettier": "6.5.0",
     "eslint-plugin-prettier": "3.1.1",
