fix(.env): environment variables at buildtime fixed

--- a/now.json
+++ b/now.json
@@ -4,7 +4,11 @@
 		"env": {
 			"WEATHER_API": "https://api.openweathermap.org/data/2.5/",
 			"WEATHER_KEY": "@secretkey"
-		} 
+		}
+	},
+	"env": {
+		"WEATHER_API": "https://api.openweathermap.org/data/2.5/",
+		"WEATHER_KEY": "@secretkey"
 	},
 	"builds": [
 		{
