--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@material-ui/core": "4.5.2",
     "@material-ui/lab": "4.0.0-alpha.30",
+    "@reach/router": "1.3.3",
     "moment": "2.24.0",
     "prop-types": "15.7.2",
     "react": "16.11.0",
@@ -45,7 +46,7 @@
     "changelog:patch": "changelog -p && git add CHANGELOG.md && git commit -m 'updated CHANGELOG.md' && npm version patch",
     "deploy:prod": "now --prod",
     "deploy:qa": "now",
-    "start": "webpack-dev-server --config ./webpack.dev.config.js --mode development"
+    "start": "webpack-dev-server --config ./webpack.dev.config.js --mode development --history-api-fallback"
   },
   "repository": {
     "type": "git",
